--- a/frontend/csyllabus/src/app/components/social/social.component.css
+++ b/frontend/csyllabus/src/app/components/social/social.component.css
@@ -51,3 +51,11 @@
     background-repeat:   no-repeat;
     background-position: center center;
   }
+
+  .sharepart, .commentspart {
+    text-align: left;
+  }
+
+  .example-full-width{
+    width: 500px;
+  }
