--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -287,7 +287,7 @@
         </div>
     </section>
 
-    <!-- ***** Our Team Area Start
+    <!-- ***** Our Team Area Start -->
     <section class="our-Team-area bg-white section_padding_100_50 clearfix" id="team">
         <div class="container">
             <div class="row">
@@ -299,60 +299,109 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-team-member">
                         <div class="member-image">
-                            <img src="img/team-img/team-1.jpg" alt="">
-                            <div class="team-hover-effects">
-                                <div class="team-social-icon">
-                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                                    <a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
+                            <img src="../../../images/matej-vukosav.jpg" style="width:200px; height:200px;" alt="">
+
                         </div>
                         <div class="member-text">
-                            <h4>Jackson Nash</h4>
-                            <p>Tax Advice</p>
+                            <h4>Matej Vukosav</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-team-member">
                         <div class="member-image">
-                            <img src="img/team-img/team-2.jpg" alt="">
+                            <img src="../../../images/filip.jpg" style="width:200px; height:200px;" alt="">
                         </div>
                         <div class="member-text">
                             <h4>Filip Turčinović</h4>
-                            <p>CEO-Founder</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-team-member">
                         <div class="member-image">
-                            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAiWAAAAJGY3YzNkYTY2LTZmZDEtNDdkOC1iNTNjLTIyYmQ1YTVjZTM5Mg.jpg" alt="">
+                            <img src="../../../images/guber.jpg" style="width:200px; height:200px;" alt="">
                         </div>
                         <div class="member-text">
                             <h4>Emanuel Guberović</h4>
-                            <p>Computer Engineer</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-team-member">
                         <div class="member-image">
-                            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/5/005/050/32f/2afadde.jpg" alt="">
+                            <img src="../../../images/zvonimir.jpg" style="width:200px; height:200px;" alt="">
 
                         </div>
                         <div class="member-text">
                             <h4>Zvonimir Relja</h4>
-                            <p>Computer Engineer</p>
+                        </div>
+                    </div>
+                </div>
+
+                                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-team-member">
+                        <div class="member-image">
+                            <img src="../../../images/thomas.JPG" style="width:200px; height:200px;" alt="">
+
+                        </div>
+                        <div class="member-text">
+                            <h4>Thomas Benetti</h4>
+                        </div>
+                    </div>
+                </div>
+
+                                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-team-member">
+                        <div class="member-image">
+                            <img src="../../../images/adrein.png" style="width:200px; height:200px;" alt="">
+
+                        </div>
+                        <div class="member-text">
+                            <h4>Adrien Roques</h4>
+                        </div>
+                    </div>
+                </div>
+
+                                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-team-member">
+                        <div class="member-image">
+                            <img src="../../../images/sebastian.png" style="width:200px; height:200px;" alt="">
+
+                        </div>
+                        <div class="member-text">
+                            <h4>Sebastian Obando Mayoral</h4>
+                        </div>
+                    </div>
+                </div>
+
+                             <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-team-member">
+                        <div class="member-image">
+                            <img src="../../../images/Ivana.jpg" style="width:200px; height:200px;" alt="">
+
+                        </div>
+                        <div class="member-text">
+                            <h4>Ivana Bosnić</h4>
+                        </div>
+                    </div>
+                </div>
+
+                            <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-team-member">
+                        <div class="member-image">
+                            <img src="../../../images/Raffaela.jpg" style="width:200px; height:200px;" alt="">
+
+                        </div>
+                        <div class="member-text">
+                            <h4>Raffaela Mirandola</h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-***** -->
+
