--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.html
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.html
@@ -48,33 +48,33 @@
     <section id="four" class="wrapper style2 alt" >
         <div class="inner">
             <header class="major">
-                <p>Libraries</p>
-                <h2>Utilize one of our libraries in your favorite language.</h2>
+                <p>CONNECT WITH US</p>
+                <h2>Connect with us and have your courses in our app!</h2>
             </header>
             <section class="timeline">
                 <section>
                     <header>
-                        <p>Official</p>
-                        <h4>PHP Library</h4>
+                        <p>Login</p>
+                        <h4>FACULTY ADMIN LOGIN</h4>
                     </header>
-                    <span class="image"><img src="images/js.png" alt=""></span>
-                    <div class="content">
-                        <p>The official PHP library makes it possible to connect with Csyllabus. Follow the documentation for an introduction to the library with concrete examples.</p>
-                        <ul class="actions">
-                            <li><a href="/javascript-library" class="button">More</a></li>
-                        </ul>
-                    </div>
+                    <span class="image"><img src="../../../images/login.png" style="width:90%; height: 400px;" alt=""></span>
+
                 </section>
                 <section >
                     <header>
-                        <p>Official</p>
-                        <h4>Python Library</h4>
+                        <p>Manage courses</p>
+                        <h4>UPDATE AND DELETE YOUR COURSES</h4>
                     </header>
-                    <span class="image"><img src="images/python.png" alt=""></span>
-                    <div class="content">
-                        <p>Coming out soon..</p>
+                   <span class="image"><img src="../../../images/courses.png" style="width:90%; height: 400px;" alt=""></span>
 
-                    </div>
+                </section>
+                                <section >
+                    <header>
+                        <p>Create new courses</p>
+                        <h4>ADD NEW COURSES TO SYLLABUS</h4>
+                    </header>
+                   <span class="image"><img src="../../../images/course_edit.png" style="width:90%; height: 400px;" alt=""></span>
+
                 </section>
             </section>
         </div>
