--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.html
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.html
@@ -80,23 +80,42 @@
         </div>
     </section>
 
-<!--
     <section id="three" class="wrapper">
         <div class="inner">
             <header class="major alt">
-                <p>Read</p>
-                <h2>Developer Tutorials</h2>
+                <p>CONNECT</p>
+                <h2>Request access to faculty admin</h2>
             </header>
             <section class="posts">
                 <article>
-                    <span class="image"><img src="images/pic01.jpg" alt=""></span>
                     <div class="content">
-                        <p>Written and maintained by Csyllabus team, here you will find tutorials that help you get started with connecting to our Csyllabus app. If you have any problems understanding, please feel free to contact us.</p>
+                        <p>If you are faculty admin and want to connect your syllabus data with us, please reach out to us at info@csyllabus.com to get access.</p>
 
                     </div>
                 </article>
             </section>
         </div>
     </section>
-    -->
+
+    <section id="dev" class="wrapper">
+        <div class="inner">
+            <header class="major alt">
+                <p>Documentation</p>
+                <h2>Csyllabus documentation</h2>
+            </header>
+            <section class="posts">
+                <article>
+                    <span class="image"><img src="images/pic01.jpg" alt=""></span>
+                    <div class="content">
+                        <p>Written and maintained by Csyllabus team, here you will find tutorials that help you get started with connecting to our Csyllabus app. If you have any problems understanding, please feel free to contact us.</p>
+                       <a target="_blank" href="http://www.fer.unizg.hr/rasip/dsd/projects/csyllabus_score/documents">
+                        <button mat-button>Documentation</button>
+                           </a>
+                    </div>
+                </article>
+            </section>
+        </div>
+    </section>
+
+
 </div>
