added publicly visible documentation location

--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.html
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.html
@@ -108,7 +108,7 @@
                     <span class="image"><img src="images/pic01.jpg" alt=""></span>
                     <div class="content">
                         <p>Written and maintained by Csyllabus team, here you will find tutorials that help you get started with connecting to our Csyllabus app. If you have any problems understanding, please feel free to contact us.</p>
-                       <a target="_blank" href="http://www.fer.unizg.hr/rasip/dsd/projects/csyllabus_score/documents">
+                       <a target="_blank" href="https://github.com/CSyllabus/Documentation">
                         <button mat-button>Documentation</button>
                            </a>
                     </div>
