--- a/frontend/admin/src/app/course/course/course.html
+++ b/frontend/admin/src/app/course/course/course.html
@@ -62,7 +62,7 @@
 -->
 
     <mat-form-field style="width: 100%;">
-  <textarea matInput placeholder="Description" [(ngModel)]="course.description"></textarea>
+  <textarea style="height:100px" matInput placeholder="Description" [(ngModel)]="course.description"></textarea>
     </mat-form-field>
 
 
