--- a/frontend/admin/src/app/course/courses/courses.component.html
+++ b/frontend/admin/src/app/course/courses/courses.component.html
@@ -10,7 +10,7 @@
   <mat-card-title class="intrev-card-title">Courses in the database
     <mat-card-subtitle style="color: white; margin-bottom: 0;">Courses resource</mat-card-subtitle>
   </mat-card-title>
-  <div class="example-header">
+  <div class="example-header" style="display:none">
     <mat-form-field floatPlaceholder="never" style="    position: absolute;
     top: 50px;
     right: 20px;">
