fixes in comments social part

--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,79 +1,77 @@
+<div *ngIf="course"
+     style="text-align:left; background-color:#448AFF; padding: 80px 0 10px 0; "
+>
+
+  <div class="container" style=" padding-top:10px;padding-left:50px; vertical-align:top">
+    <p style="display:inline; font-size:25px; font-weight:bold; color: white;">{{course.name}}</p>
+  </div>
+
+</div>
 <div class="container">
   <div class="col-md-12">
 
-      <p *ngIf="!course" style="text-align:center;"></p>
+    <p *ngIf="!course" style="text-align:center;"></p>
 
-      <div id="search-component-spinner" *ngIf="false">
-        <mat-spinner style="margin-left: auto;
+    <div id="search-component-spinner" *ngIf="false">
+      <mat-spinner style="margin-left: auto;
 margin-right: auto; "></mat-spinner>
-      </div>
-      <div *ngIf="course">
-        <div>
-          <div
-            style="text-align:left; background-color:#448AFF; padding: 80px 0 10px 0; width: calc(100% + 48px); margin-left: -24px;"
-            class="col-md-12">
+    </div>
+    <div *ngIf="course">
+      <div>
 
-            <div style="width: 70%;display:inline-block; padding-top:10px;padding-left:50px; vertical-align:top">
-              <p style="display:inline; font-size:25px; font-weight:bold; color: white;">{{course.name}}</p>
-            </div>
+        <!--
+                <img class="logoU" src="http://www.clker.com/cliparts/7/4/b/6/13373556381963102819fer.logo_.png" height="80">-->
+        <div class="col-md-12">
+
+          <div style="vertical-align:top; text-align:left; line-height: 1.5;" class="col-md-8">
+            {{course.description}}
+            <br><br>
 
           </div>
-          <!--
-                  <img class="logoU" src="http://www.clker.com/cliparts/7/4/b/6/13373556381963102819fer.logo_.png" height="80">-->
-          <div class="col-md-12">
 
-            <div style="vertical-align:top; text-align:left; line-height: 1.5;" class="col-md-8">
-              {{course.description}}
-              <br><br>
+          <div style="text-align:right; font-size:16px; padding-top:40px; padding-left:40px" class="col-md-4">
 
-            </div>
+            <table style="border:0px" align=center>
+              <tr>
+                <td>{{course.university}}</td>
+              </tr>
+              <tr>
+                <td style="height:10px"></td>
+              </tr>
+              <tr>
+                <td>{{course.faculty}}</td>
+              </tr>
+              <tr>
+                <td style="height:10px"></td>
+              </tr>
+              <tr>
+                <td style="height:10px"></td>
+              </tr>
+              <tr>
+                <td>Semesters: {{course.semester}}</td>
+              </tr>
+              <tr>
+                <td style="height:10px"></td>
+              </tr>
+              <tr>
+                <td>Credits: {{course.ects}}</td>
+              </tr>
+              <tr>
+                <td style="height:10px"></td>
+              </tr>
 
-            <div style="text-align:right; font-size:16px; padding-top:40px; padding-left:40px" class="col-md-4">
+            </table>
 
-              <table style="border:0px" align=center>
-                <tr>
-                  <td>{{course.university}}</td>
-                </tr>
-                <tr>
-                  <td style="height:10px"></td>
-                </tr>
-                <tr>
-                  <td>{{course.faculty}}</td>
-                </tr>
-                <tr>
-                  <td style="height:10px"></td>
-                </tr>
-                <tr>
-                  <td>Study: {{course.study_lvl}}</td>
-                </tr>
-                <tr>
-                  <td style="height:10px"></td>
-                </tr>
-                <tr>
-                  <td>Semesters: {{course.semester}}</td>
-                </tr>
-                <tr>
-                  <td style="height:10px"></td>
-                </tr>
-                <tr>
-                  <td>ECTS: {{course.ects}}</td>
-                </tr>
-                <tr>
-                  <td style="height:10px"></td>
-                </tr>
-                <tr>
-                  <td>Eng Level: {{course.english_level}}</td>
-                </tr>
-
-              </table>
-
-            </div>
-            <app-social [courseId]=course.id></app-social>
           </div>
 
         </div>
+        <div class="col-md-12">
+          <app-social [courseId]=course.id></app-social>
+        </div>
 
       </div>
+
+    </div>
   </div>
 </div>
 
