--- a/frontend/admin/src/app/course/course/course.html
+++ b/frontend/admin/src/app/course/course/course.html
@@ -84,7 +84,7 @@
 
   </div>
   <mat-card-actions style="text-align: center;">
-    <button mat-button *ngIf="course.id" (click)="saveCourse(true)">
+    <button [disabled]="!allow_access" mat-button *ngIf="course.id" (click)="saveCourse(true)">
       <mat-icon>save</mat-icon>
       SAVE
     </button>
