--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -178,3 +178,151 @@
   max-width: inherit !important;
 }
 
+
+
+
+.animatedLeft {
+
+    background-repeat: no-repeat;
+    background-position: left top;
+    padding-top:0px;
+    margin-bottom:2px;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+ }
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+     opacity: 0;
+     -webkit-transform: translateX(-30px);
+  }
+  100% {
+     opacity: 1;
+     -webkit-transform: translateX(0);
+  }
+}
+
+ @keyframes fadeInLeft {
+    0% {
+       opacity: 0;
+       transform: translateX(-30px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateX(0);
+    }
+ }
+
+ .fadeInLeft {
+ -webkit-animation-name: fadeInLeft;
+ animation-name: fadeInLeft;
+ }
+
+
+ .animatedRight {
+
+    animation-delay: 1s;
+    background-repeat: no-repeat;
+    background-position: right top;
+    padding-top:0px;
+    margin-bottom:2px;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+ }
+
+@-webkit-keyframes fadeInRight {
+  0% {
+     opacity: 0;
+     -webkit-transform: translateX(+30px);
+  }
+  100% {
+     opacity: 1;
+     -webkit-transform: translateX(0);
+  }
+}
+
+ @keyframes fadeInRight {
+    0% {
+       opacity: 0;
+       transform: translateX(+30px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateX(0);
+    }
+ }
+
+ .fadeInRight {
+ -webkit-animation-name: fadeInRight;
+ animation-name: fadeInRight;
+ }
+
+ .title-bold{
+  display:inline-block;
+  font-weight:900;
+
+  font-size:400%;
+  -webkit-transform: scale(1, 1.3);
+  -ms-transform: scale(1, 1.3);
+  -o-transform: scale(1, 1.3);
+  transform: scale(1, 1.3);
+  font-family: montserrat;
+  margin-bottom:2px;
+  margin-top:-90px
+ }
+
+ .title-thin{
+  display:inline-block;
+  font-weight:100;
+
+
+  font-size:400%;
+  -webkit-transform: scale(1, 1.3);
+  -ms-transform: scale(1, 1.3);
+  -o-transform: scale(1, 1.3);
+  transform: scale(1, 1.3);
+  font-family: montserrat;
+  margin-bottom:2px;
+  margin-top:-90px
+ }
+
+ .subtitle-landing {
+  font-size:150%;
+  margin-bottom:2px;
+  padding-left:227px
+ }
+
+
+.animatedIn {
+
+
+            animation-delay: 2s;
+            background-repeat: no-repeat;
+            background-position: left top;
+            padding-top:80px;
+            margin-bottom:2px;
+            -webkit-animation-duration: 3s;
+            animation-duration: 3s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+         }
+
+         @-webkit-keyframes fadeIn {
+            0% {opacity: 0;}
+            100% {opacity: 1;}
+         }
+
+         @keyframes fadeIn {
+            0% {opacity: 0;}
+            100% {opacity: 1;}
+         }
+
+         .fadeIn {
+            -webkit-animation-name: fadeIn;
+            animation-name: fadeIn;
+         }
+
