--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,18 +1,29 @@
 
     <section id="landing-page">
-        <div class="inner" style="margin-top:-30px;">
-           <div  style="box-shadow:inset 0 0 0 1000px rgba(0,0,0,0.3); padding:5%;  margin:auto;">
-            <p style="font-size:1.3em;">Discover courses all over the world</p>
-            <h1 style="color:white; font-size:">Going on Erasmus and don't know which courses to take?</h1>
-            <ul class="actions">
-               <li> <a class="button big special scrolly" fragment="start" (click)="getStarted()">Explore and compare courses</a>
+        <div style="margin-top:-80px" >
+           <!--<div  style="box-shadow:inset 0 0 0 1000px rgba(0,0,0,0.3); padding:5%;  margin:auto;">-->
+          <div class="animatedLeft fadeInLeft" >
+          <p class="title-bold">Discover</p>
+            <p class="title-thin"> Courses </p>
+
+            </div>
+
+          <div class="animatedRight fadeInRight" >
+          <p class="subtitle-landing">from all over the world</p>
+          </div>
+            <!--<h1 style="color:white; font-size:">Going on Erasmus and don't know which courses to take?</h1>-->
+
+          <div class="animatedIn fadeIn">
+          <ul class="actions">
+               <li> <a class="button big special scrolly" style="width:500px"  (click)="getStarted();">Explore & compare</a>
 </li>
             </ul>
-        </div>
             </div>
+        </div>
+            <!--</div>-->
     </section>
 
-<div class="bgexplorer" id="start">
+<div *ngIf="getStart" class="bgexplorer" id="start">
   <div class="col-md-12">
     <p id="typewriter" class="chooser-heading"></p>
     <br>
