meta for sharing Corrected

--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -68,7 +68,7 @@ margin-right: auto; "></mat-spinner>
               </table>
 
             </div>
-            <app-social [courseId]=course.id [title]=course.name [university]=course.university [country]=course.country [description]=description </app-social>
+            <app-social [courseId]=course.id [title]=course.name [university]=course.university [description]=course.description> </app-social>
           </div>
 
         </div>
