--- a/frontend/csyllabus/src/app/components/social/social.component.html
+++ b/frontend/csyllabus/src/app/components/social/social.component.html
@@ -5,7 +5,7 @@
                  [stumbleUpOn]="false"
                  [reddit]="false"
                  [tumblr]="false"
-                 [url]="https://csyllabus.com/demo/course/{{courseID}}" [title]="{{title}}" [description]="{{description}}"
+                 [url]=url [title]=title [description]=description
   >
 
   </share-buttons>
