--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="course"
-     style="text-align:left; background-color:#448AFF; padding: 80px 0 10px 0; "
+     style="text-align:left; background:linear-gradient(to right, rgb(116,153,227), rgb(47, 75, 131)); padding: 25px 0 10px 0; "
 >
 
   <div class="container" style=" padding-top:10px;padding-left:50px; vertical-align:top">
