--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.css
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.css
@@ -3908,15 +3908,15 @@
 		text-align: center;
 	}
 	#landing-page {
-		background-image: url("../../../images/fer.jpg");
+		background-image: url("../../../images/landing.jpg");
 
 		background-attachment: fixed;
 		background-position: center center;
 		background-size: cover;
 		color: #fff;
 		padding: 16em 3em;
-		position: relative;
 		text-align: center;
+    height: 46.6em;
 	}
 
 		#banner h1 {
