--- a/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
@@ -26,7 +26,7 @@
               <input matInput placeholder="Full page url:" disabled
                      value="https://csyllabus.com/demo/course/{{course.id}}">
             </mat-form-field>
-            <a mat-icon-button target="_blank" href="http://localhost:4200/course/{{course.id}}">
+            <a mat-icon-button target="_blank" routerLink="course/{{course.id}}">
               <mat-icon>link</mat-icon>
             </a>
           </form>
