--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,6 +1,6 @@
 
     <section id="landing-page">
-        <div style="margin-top:-80px" >
+        <div class="title-subtitle-div" >
            <!--<div  style="box-shadow:inset 0 0 0 1000px rgba(0,0,0,0.3); padding:5%;  margin:auto;">-->
           <div class="animatedLeft fadeInLeft" >
           <p class="title-bold">Discover</p>
@@ -15,7 +15,7 @@
 
           <div class="animatedIn fadeIn">
           <ul class="actions">
-               <li> <a class="button big special scrolly" style="width:500px"  (click)="getStarted();">Explore & compare</a>
+               <li> <a id="big-green-button" class="button big special scrolly" (click)="getStarted();">Explore & compare</a>
 </li>
             </ul>
             </div>
