--- a/frontend/csyllabus/src/app/components/navbar/navbar.component.html
+++ b/frontend/csyllabus/src/app/components/navbar/navbar.component.html
@@ -17,8 +17,8 @@
         <button mat-menu-item routerLink="about">
             <span>About</span>
         </button>
-        <button mat-menu-item routerLink="documentation">
-            <span>Documentation</span>
+        <button mat-menu-item routerLink="connect">
+            <span>Connect</span>
         </button>
     </mat-menu>
 </mat-toolbar>
