changes to images, png to jpg where png not needed

--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -345,7 +345,7 @@
                                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-team-member">
                         <div class="member-image">
-                            <img src="../../../images/thomas.JPG" style="width:200px; height:200px;" alt="">
+                            <img src="../../../images/thomas.jpg" style="width:200px; height:200px;" alt="">
 
                         </div>
                         <div class="member-text">
@@ -369,7 +369,7 @@
                                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-team-member">
                         <div class="member-image">
-                            <img src="../../../images/sebastian.png" style="width:200px; height:200px;" alt="">
+                            <img src="../../../images/sebastian.jpg" style="width:200px; height:200px;" alt="">
 
                         </div>
                         <div class="member-text">
