--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.css
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.css
@@ -4173,3 +4173,15 @@
 			}
 
 		}
+
+@media only screen and (max-width: 767px) {
+    .image-md {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+    .image-sm {
+    display: none;
+  }
+}
