--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.html
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.html
@@ -57,24 +57,24 @@
                         <p>Login</p>
                         <h4>FACULTY ADMIN LOGIN</h4>
                     </header>
-                    <span class="image"><img src="../../../images/login.png" style="width:90%; height: 400px;" alt=""></span>
-
+                    <span class="image image-md"><img src="../../../images/login.jpg" style="width:90%;" alt=""></span>
+                    <span class="image image-sm"><img src="../../../images/login_mobile.jpg" style="width:90%;" alt=""></span>
                 </section>
                 <section >
                     <header>
                         <p>Manage courses</p>
                         <h4>UPDATE AND DELETE YOUR COURSES</h4>
                     </header>
-                   <span class="image"><img src="../../../images/courses.png" style="width:90%; height: 400px;" alt=""></span>
-
+                   <span class="image image-md"><img src="../../../images/courses.jpg" style="width:90%;" alt=""></span>
+                   <span class="image image-sm"><img src="../../../images/courses_mobile.jpg" style="width:90%;" alt=""></span>
                 </section>
                                 <section >
                     <header>
                         <p>Create new courses</p>
                         <h4>ADD NEW COURSES TO SYLLABUS</h4>
                     </header>
-                   <span class="image"><img src="../../../images/course_edit.png" style="width:90%; height: 400px;" alt=""></span>
-
+                   <span class="image image-md"><img src="../../../images/course_edit.jpg" style="width:90%;" alt=""></span>
+                   <span class="image image-sm"><img src="../../../images/course_edit_mobile.jpg" style="width:90%;" alt=""></span>
                 </section>
             </section>
         </div>
