added a link to wiki LSA and a disclaimer in snackbar saying results are not perfect yet

--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -45,7 +45,7 @@
          (click)="chooserSelect('comparator')">
       <div class="chooser-card-text">
         <p class="chooser-card-title">COMPARE</p>
-        <p class="chooser-card-subtitle">courses using our algorithm</p>
+        <p class="chooser-card-subtitle">courses with semantic indexing</p>
       </div>
     </div>
   </div>
