--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.html
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.html
@@ -1,6 +1,8 @@
 <form (keyup.enter)="exploreCourses()" style="position: relative; overflow: auto;">
   <div>
-    <p class="custom-card-title">Compare courses using our algorithm</p>
+    <p class="custom-card-title">Compare courses using
+      <a  href="https://en.wikipedia.org/wiki/Latent_semantic_analysis" target="_blank" style="color: white; ">latent semantic indexing</a>
+    </p>
     <div class="col-md-12" style="background-color: #fffffffa;text-align: left; position: relative; padding: 20px;">
 
       <div class="forms-group">
